--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ description: thaHipsters last stand!
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://thafaker.crabdance.com"
+    - My Linux Server: "http://thafaker.crabdance.com"
     - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "https://thahipster.de"
+  Meine Website: "https://thahipster.de"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
