--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ description: thaHipsters last stand!
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - My Linux Server: "http://thafaker.crabdance.com"
-    - Learn markdown: "http://www.markdowntutorial.com/"
+    - Mein Linux Server: "http://thafaker.crabdance.com"
+    - Markdown Anleitung: "http://www.markdowntutorial.com/"
   Meine Website: "https://thahipster.de"
 
 # Image to show in the navigation bar - image must be a square (width = height)
