--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Mein Linux Server: "http://thafaker.crabdance.com"
     - Markdown Anleitung: "http://www.markdowntutorial.com/"
-  Meine Website: "https://thahipster.de"
+  thahipster: "https://thahipster.de"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
