--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ social-network-links:
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
   instagram: vinylisation
-#  youtube: user/deanat78
+  youtube: user/thafakerde
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
@@ -98,10 +98,10 @@ url-pretty: "JanMontag.de"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "UA-31637693-3"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-31637693-3"
 
 # Google Tag Manager ID
 #gtm: ""
