--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ navbar-links:
   About Me: "aboutme"
   Resources:
     - Mein Linux Server: "http://thafaker.crabdance.com"
-    - Markdown Anleitung: "http://www.markdowntutorial.com/"
-  thahipster: "https://thahipster.de"
+    - thahipster: "https://thahipster.de"
+
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
