--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
   About Me: "aboutme"
   Resources:
     - Mein Linux Server: "http://thafaker.crabdance.com"
-    - thahipster: "https://thahipster.de"
+    - thahipster.de: "https://thahipster.de"
 
 
 # Image to show in the navigation bar - image must be a square (width = height)
