--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "webmaster@thafaker.de"
+  email: "webmaster@JanMontag.de"
 #  facebook: deanattali
   github: thafaker
   twitter: herr_montag_
