--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "webmaster@JanMontag.de"
+  email: "thafaker@gmx.net"
 #  facebook: deanattali
   github: thafaker
   twitter: herr_montag_
@@ -252,6 +252,3 @@ prose:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
