--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: JanMontag.de
+title: 'JanMontag.de'
 
 # Short description of your site
 description: thaHipsters last stand!
@@ -98,7 +98,7 @@ url-pretty: "JanMontag.de"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-# gtag: "UA-31637693-3"
+gtag: "UA-31637693-3"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-31637693-3"
