--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Jan
+title: 
 
 # Short description of your site
 description: thaHipsters last stand!
